--- a/cms/src/views/LandingPage/style.scss
+++ b/cms/src/views/LandingPage/style.scss
@@ -2,12 +2,23 @@
     display: flex;
     justify-content: center;
 }
+
+@mixin inputBox() {
+    padding-left: 0.5em;
+    border: 2px solid #b8b8b8;
+    background-color: #e6e6e6;
+    text-align: left;
+    &:hover {
+        border: 2px solid #757575;
+    }
+}
+
 .login-container {
     display: flex;
     flex-direction: column;
     width: 250px;
     align-items: center;
-    //margin-top: 100px;
+    margin-top: 100px;
 
     & > * {
         margin-top: 10px;
@@ -15,7 +26,6 @@
         border-radius: 3px;
         width: 100%;
         box-sizing: border-box;
-        padding: 0 0.3rem;
         text-align: center;
     }
     
@@ -24,18 +34,32 @@
         width: 120px;
         overflow: hidden;
         img {
-            margin: -55px 0 0 -55px;
+            margin: -55px 0 0 -50px;
             height: 220px;
             width: 220px;
         }
     }
 
     & > input {
-        border: 2px solid #b8b8b8;
-        background-color: #e6e6e6;
-        text-align: left;
-        &:hover {
-            border: 2px solid #757575;
+        @include inputBox();
+    }
+
+    .password-box {
+        text-align: right;
+
+        input {
+            @include inputBox();
+            height: 30px;
+            border-radius: 3px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        img {
+            position: relative;
+            top: -25px;
+            right: 5px;
+            width: 25px;
+            height: 20px;
         }
     }
 
