--- a/src/util/style.scss
+++ b/src/util/style.scss
@@ -1,6 +1,7 @@
 .body {
     display: flex;
-    justify-content: center;}
+    justify-content: center;
+}
 
 @mixin inputText() {
     padding-left: 0.5em;
@@ -58,22 +59,32 @@
     .input-text {
         @include inputText();
     }
+    
     .input-password {
         text-align: right;
         width: 100%;
         height: 30px;
 
-        input {
-            @include inputText();
-            border-radius: 3px;
-            }
-
         img {
             position: relative;
-            top: -25px;
+            top: 4px;
             right: 5px;
             width: 25px;
             height: 20px;
+            z-index: 2;
+
+            &:hover + input{
+                border: 2px solid #757575;
+            }
+        }
+
+        input {
+            position: relative;
+            top: -25px;
+            z-index: 1;
+
+            @include inputText();
+            border-radius: 3px;
         }
     }
     .input-box {
@@ -82,7 +93,6 @@
         width: 100%;
 
         .red-star {
-            // flex-basis: 5%;
             .red-star-icon {
                 width: 12px;
                 height: 12px;
@@ -90,7 +100,6 @@
         }
 
         .name-text {
-            // flex-basis: 35%;
             text-align: left;
             font-weight: 600;
             font-size: 12px;
@@ -104,7 +113,6 @@
         }
 
         .input-select {
-            // flex-basis: 60%;
             @include inputText();
             text-align: left;
         }
@@ -119,7 +127,6 @@
         }
 
         .input-button-block {
-            // flex-basis: 30%;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -134,24 +141,6 @@
                 text-align: center;
                 color: #666666;
                 cursor: pointer;
-            }
-        }
-
-        .password-block {
-            text-align: right;
-            // flex-basis: 71.5%;
-
-            input {
-                @include inputText();
-                border-radius: 3px;
-                }
-
-            img {
-                position: relative;
-                top: -25px;
-                right: 5px;
-                width: 25px;
-                height: 20px;
             }
         }
     }
