--- a/src/util/style.scss
+++ b/src/util/style.scss
@@ -1,3 +1,7 @@
+//container - area - box - block - content
+$fcolor100: #333333;
+$fcolor200: #444444;
+
 .body {
     display: flex;
     justify-content: center;
@@ -18,6 +22,75 @@
     }
 }
 
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+    .home-area {
+        text-align: left;
+        margin: 0 10px;
+    }
+    .modal-area {
+        display: flex;
+        justify-content: space-around;
+        width: 100px;
+        margin: 0 10px;
+    }
+
+    img {
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+    }
+
+    .modal {
+        $width: 100px;
+        $height: 80px;
+        position: absolute;
+        width: $width;
+        height: $height;
+        top: 60px;
+        right: 35px;
+        
+        &::before {
+            position: absolute;
+            content: "";
+            border-bottom: $height/6 solid #e6e6e6;
+            border-left: $width/12 solid transparent;
+            border-right: $width/12 solid transparent;
+            left: $width*5/12;
+            top: -$height/6;
+        }
+
+        div {
+            width: $width;
+            height: $height/2;
+            box-sizing: border-box;
+            background-color: #e6e6e6;
+            border: 1px solid white;
+            border-top: 0;
+            text-align: center;
+            line-height: $height/2;
+            color: $fcolor100;
+            font-size: 13px;
+
+            &:hover {
+                cursor: pointer;
+                background-color: #b8b8b8;
+            }
+        }
+
+        .top-content {
+            border-radius: 5px 5px 0 0;
+        }
+
+        .bottom-content {
+            border-radius: 0 0 5px 5px;
+        }
+    }
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -30,13 +103,13 @@
     }
 
     h1 {
-        color: #333333;
+        color: $fcolor100;
         font-size: 60px;
         font-weight: 500;
     }
 
     h2 {
-        color: #333333;
+        color: $fcolor100;
         font-weight: 900;
     }
 
@@ -104,7 +177,7 @@
             font-weight: 600;
             font-size: 12px;
             padding: 4px 1px;
-            color: #444444;
+            color: $fcolor200;
         }
 
         .input-text {
