--- a/src/util/style.scss
+++ b/src/util/style.scss
@@ -1,6 +1,9 @@
 //container - area - box - block - content
 $fcolor100: #333333;
 $fcolor200: #444444;
+$fcolor300: #666666;
+$fcolor400: #888888;
+$fcolor500: #999999;
 
 .body {
     display: flex;
@@ -50,6 +53,9 @@ $fcolor200: #444444;
         width: 30px;
         height: 30px;
         cursor: pointer;
+        &:hover {
+            filter: drop-shadow(0 0 10px #fd4562);
+        }
     }
 
     .modal {
@@ -60,7 +66,10 @@ $fcolor200: #444444;
         position: absolute;
         top: 50px;
         right: 25px;
-        
+        box-shadow: 0 0 5px 0 rgb(0 0 0 / 12%);    
+        background-color: transparent;
+        border-radius: 5px;
+
         &::before {
             position: absolute;
             content: "";
@@ -76,7 +85,6 @@ $fcolor200: #444444;
             height: calc($height/2);
             box-sizing: border-box;
             background-color: #e6e6e6;
-            border: 1px solid white;
             border-top: 0;
             text-align: center;
             line-height: calc($height/2);
@@ -91,6 +99,7 @@ $fcolor200: #444444;
 
         .top-content {
             border-radius: 5px 5px 0 0;
+            border-bottom: 0.5px solid white;
         }
 
         .bottom-content {
@@ -119,6 +128,19 @@ $fcolor200: #444444;
     h2 {
         color: $fcolor100;
         font-weight: 900;
+    }
+
+    h3 {
+        color: $fcolor300;
+    }
+
+    p {
+        color: $fcolor500;
+        
+        u {
+            color: $fcolor400;
+            font-weight: 500;
+        }
     }
 
     .lock-icon {
