--- a/src/util/style.scss
+++ b/src/util/style.scss
@@ -28,7 +28,6 @@ $fcolor500: #999999;
 .header {
     display: flex;
     justify-content: center;
-}
 
 .header-container {
     max-width: 750px;
@@ -107,6 +106,9 @@ $fcolor500: #999999;
         }
     }
 }
+}
+
+
 
 .container {
     display: flex;
@@ -159,10 +161,15 @@ $fcolor500: #999999;
         width: 120px;
         margin-bottom: 20px;
     }
+
     .input-text {
         @include inputText();
     }
     
+    .input-code {
+        @include inputText();
+    }
+
     .input-password {
         text-align: right;
         width: 100%;
@@ -190,6 +197,7 @@ $fcolor500: #999999;
             border-radius: 3px;
         }
     }
+
     .input-box {
         display: flex;
         height: 30px;
@@ -211,7 +219,6 @@ $fcolor500: #999999;
         }
 
         .input-text {
-            background-color: red;
             @include inputText();
         }
 
@@ -248,6 +255,38 @@ $fcolor500: #999999;
         }
     }
 
+    .code-box {
+        display: flex;
+        justify-content: center;
+        margin-top: 30px;
+        
+        input {
+            width: 30px;
+            font-size: 30px;
+            border: 0;
+            border-bottom: 2px solid $fcolor400;
+            margin: 0 3px;
+            text-align: center;
+        }
+    }
+
+    .reset-box {
+        color: $fcolor300;
+        text-align: right;
+        width: 100%;
+        font-size: 16px;
+
+        .reset-button {
+            margin: 0 60px;
+            cursor: pointer;
+
+            &:hover {
+                font-weight: 900;
+                color:$fcolor100
+            }
+        }
+    }
+    
     .login-button {
         border: 2px solid #90c9a3;
         background-color: #aff4c6;
