--- a/src/util/style.scss
+++ b/src/util/style.scss
@@ -65,7 +65,7 @@ $fcolor500: #999999;
         position: absolute;
         top: 50px;
         right: 25px;
-        box-shadow: 0 0 5px 0 rgb(0 0 0 / 12%);    
+        box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.12);    
         background-color: transparent;
         border-radius: 5px;
 
@@ -177,7 +177,7 @@ $fcolor500: #999999;
 
         img {
             position: relative;
-            top: 4px;
+            top: 5px;
             right: 5px;
             width: 25px;
             height: 20px;
